<rdar://problem/9002047> and https://bugs.webkit.org/show_bug.cgi?id=54426 WebFrameLoaderClient::shouldGoToHistoryItem needs implementation

Reviewed by Darin Adler.

Source/WebKit2:

Expose HistoryItem -> ItemID mapping for the message:
* WebProcess/WebPage/WebBackForwardListProxy.cpp:
(WebKit::WebBackForwardListProxy::idForItem):
* WebProcess/WebPage/WebBackForwardListProxy.h:

Sync message to the UIProcess for the answer:
* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::shouldGoToHistoryItem):

Call out to the WebLoaderClient for the answer:
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::shouldGoToBackForwardListItem):
* UIProcess/WebPageProxy.h:
* UIProcess/WebPageProxy.messages.in:

Call out to the client application for the answer:
* UIProcess/WebLoaderClient.cpp:
(WebKit::WebLoaderClient::shouldGoToBackForwardListItem):
* UIProcess/WebLoaderClient.h:

Add API for the client application to listen for this:
* UIProcess/API/C/WKPage.h:

Tools:

Add dummy implementations to keep our tools building.

* MiniBrowser/mac/BrowserWindowController.m:
(-[BrowserWindowController awakeFromNib]):

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::initialize):



Canonical link: https://commits.webkit.org/68584@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78588 268f45cc-cd09-0410-ab3c-d52691b4dbfc