Source/WebKit2/UIProcess/WebPageProxy.cpp
@@ -479,6 +479,11 @@ void WebPageProxy::didChangeBackForwardList(WebBackForwardListItem* added, Vecto
     m_loaderClient.didChangeBackForwardList(this, added, removed);
 }
 
+void WebPageProxy::shouldGoToBackForwardListItem(uint64_t itemID, bool& shouldGoToBackForwardItem)
+{
+    WebBackForwardListItem* item = process()->webBackForwardItem(itemID);
+    shouldGoToBackForwardItem = item && m_loaderClient.shouldGoToBackForwardListItem(this, item);
+}
     
 bool WebPageProxy::canShowMIMEType(const String& mimeType) const
 {
